Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2154

Lua plugin asserts traffic_server on startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • Lua
    • None

    Description

      From esmq:

      [TrafficServer] using root directory '/usr/local/trafficserver-4.0.0/'
      FATAL: InkAPI.cc:4220: failed assert `sdk_sanity_check_iocore_structure(contp) == TS_SUCCESS`
      /usr/local/trafficserver-4.0.0/bin/traffic_server - STACK TRACE:
      /usr/local/trafficserver-4.0.0//lib/libtsutil.so.4(+0x15758)[0x2af9e0d24758]
      /usr/local/trafficserver-4.0.0//lib/libtsutil.so.4(+0x13f7f)[0x2af9e0d22f7f]
      /usr/local/trafficserver-4.0.0/bin/traffic_server[0x4b4864]
      /usr/local/trafficserver-4.0.0/libexec/trafficserver/lua.so(_ZN17LuaPluginInstance4initEjPPKc+0x50e)[0x2af9fbacec0e]
      /usr/local/ trafficserver-4.0.0/libexec/trafficserver/lua.so(_Z17LuaPluginRegisterjPPKc+0x105)[0x2af9fbacede5]
      /usr/local/trafficserver-4.0.0/libexec/trafficserver/lua.so(TSRemapNewInstance+0x34)[0x2af9fbaca6c4]
      /usr/local/trafficserver-4.0.0/bin/traffic_server(_ZN10UrlRewrite17load_remap_pluginEPPciP11url_mappingS0_iiPi+0x39f)[0x5870af]
      

      I see the same behavior.

      Attachments

        Activity

          People

            jamespeach James Peach
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: