TS-2154: Lua plugin asserts traffic_server on startup

The Lua plugin keep a number of per-instance hook tables. TS-1469
added a hook, but the Lua plugin was never updated, so we ended
passing a NULL continuation pointer to TSContDataSet() in
LuaPluginInstance::init(). Lets add the missing hook, and also add
a static assertion so that the next person do add a hook knows that
this requirement exists.